--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,24 @@
-body {
+@font-face {
+    font-family: "Poppins-Bold";
+    src: url(/fonts/Poppins-Bold.ttf);
+}
+
+@font-face {
+    font-family: "Poppins-Thin";
+    src: url(/fonts/Poppins-Thin.ttf);
+}
+
+@font-face {
+    font-family: "Poppins-Regular";
+    src: url(/fonts/Poppins-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Semibold";
+    src: url(/fonts/Poppins-SemiBold.ttf);
+}
+
+* body {
     margin: 0;
     padding: 0px;
     font-family: Arial;
@@ -19,6 +39,7 @@ body {
 }
 
 #header h1 {
+    font-family: "Poppins-Bold";
     text-shadow: 0px 1px 0px #fff;
     font-weight: 300;
     margin: 0px;
@@ -29,6 +50,7 @@ body {
 .question {
     font-size: 30px;
     margin: 0 5% 20px 5%;
+    font-family: "Semibold";
 }
 
 .answers {
@@ -82,7 +104,7 @@ button:hover {
 }
 
 .slide {
-    position: absolute; 
+    position: absolute;
     left: 0px;
     top: 0px;
     width: 100%;
@@ -110,4 +132,43 @@ button:hover {
     text-align: center;
     margin-top: 10px;
     font-size: 15px;
+}
+
+h2 {
+    color: #333;
+    font-weight: 100;
+    font-size: 40px;
+    margin: 40px 0px 20px;
+}
+
+#clockdiv {
+    font-family: sans-serif;
+    color: #fff;
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+    font-size: 30px;
+}
+
+#clockdiv>div {
+    padding: 10px;
+    border-radius: 100px;
+    background-image: -webkit-gradient(linear, left top, left bottom,
+            from(#ccc), to(#999));
+    display: inline-block;
+    border: solid 1px #333;
+    width: 100px;
+    height: 100px;
+}
+
+#clockdiv div>span {
+    padding: 15px;
+    border-radius: 3px;
+    background: #333;
+    display: inline-block;
+}
+
+.smalltext {
+    padding-top: 3px;
+    font-size: 16px;
 }
