--- a/css/app.css
+++ b/css/app.css
@@ -18,39 +18,47 @@
     src: url(/fonts/Poppins-SemiBold.ttf);
 }
 
+@font-face {
+    font-family: "Halloween";
+    src: url(/fonts/HALLOWEEN.ttf);
+}
+
 * body {
     margin: 0;
     padding: 0px;
-    font-family: Arial;
     font-size: 20px;
     text-align: center;
-    background-color: #eee;
+    background-color: white;
     overflow-x: hidden;
 }
 
 #header {
+    
     border-bottom: 1px solid #666;
     color: #222;
     display: block;
     padding: 10px 0;
     text-align: center;
-    background-image: -webkit-gradient(linear, left top, left bottom,
-            from(#ccc), to(#999));
+
+    
 }
 
 #header h1 {
-    font-family: "Poppins-Bold";
     text-shadow: 0px 1px 0px #fff;
     font-weight: 300;
     margin: 0px;
     padding: 10px;
     font-size: 25px;
+    font-family: "Halloween";
+    font-size: 60px;
+    color: orange;
+    
 }
 
 .question {
     font-size: 30px;
     margin: 0 5% 20px 5%;
-    font-family: "Semibold";
+
 }
 
 .answers {
@@ -123,22 +131,22 @@ button:hover {
     bottom: 0;
     width: 100%;
     height: 40px;
-    text-shadow: 0px 1px 0px #fff;
-    background-image: -webkit-gradient(linear, left top, left bottom,
-            from(#ccc), to(#999));
 }
 
 #footer h5 {
     text-align: center;
     margin-top: 10px;
     font-size: 15px;
+    font-family: "Poppins-Thin";
 }
 
 h2 {
-    color: #333;
     font-weight: 100;
-    font-size: 40px;
-    margin: 40px 0px 20px;
+    margin-bottom: 10px;
+    margin-top: -1px;
+    
+    
+ 
 }
 
 #clockdiv {
