--- a/css/app.css
+++ b/css/app.css
@@ -23,24 +23,116 @@
     src: url(/fonts/HALLOWEEN.ttf);
 }
 
-* body {
+
+/* body {
+   margin: 0;
+   border: 1px solid black;
+   padding: 0px;
+   font-family: "Poppins-Regular";
+   font-size: 20px;
+   text-align: center;
+   background-color: #00FFFF;
+   overflow-x: hidden;
+}
+
+#header {
+    border-bottom: 1px solid #666;
+    color:   #FF69B4;
+    display: block;
+    padding: 10px 0;
+    text-align: center;
+
+}
+
+#header h1{
+    font-family: "Poppins-Bold";
+    text-shadow: 3px 3px 3px black;
+    font-weight: 300;
+    margin: 0px;
+    padding: 0;
+    font-size: 25px;
+}
+
+.question{
+    font-size: 30px;
+    margin: 0 5% 2px 5%;
+}
+
+.answers{
+    margin-bottom: 10px;
+    text-align: left;
+    display: inline-block;
+}
+.answers label{
+    display: block;
+    margin-bottom: 10px;
+}
+
+button{
+
+    font-size: 18px;
+    width: 200px;
+    height: auto;
+    padding: 0px;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-top: 5px;
+}
+
+button:hover{
+    color: pink;
+    background-color: black;
+    transition: 0.5s;
+}
+
+.quiz-wrapper{
+    position: relative;
+    height: 200px;
+    margin: 0;
+}
+.rad_butn{
+    transform: scale(200%);
+    margin: 0 30px 0 -20px;
+}
+
+#results{
+    margin-top: 0;
+    padding: 0;
+}
+
+.slide{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.active-slide{
+    opacity: 1;
+    z-index: 2;
+} */
+
+body {
     margin: 0;
     padding: 0px;
+    font-family: "Poppins-Regular";
     font-size: 20px;
     text-align: center;
-    background-color: white;
+    background-color: #eee;
     overflow-x: hidden;
 }
 
 #header {
-    
     border-bottom: 1px solid #666;
     color: #222;
     display: block;
     padding: 10px 0;
     text-align: center;
-
-    
+    background-image: -webkit-gradient(linear, left top, left bottom,
+            from(#ccc), to(#999));
 }
 
 #header h1 {
@@ -49,22 +141,18 @@
     margin: 0px;
     padding: 10px;
     font-size: 25px;
-    font-family: "Halloween";
-    font-size: 60px;
-    color: orange;
-    
 }
 
 .question {
-    font-size: 30px;
-    margin: 0 5% 20px 5%;
+    font-size: 20px;
 
 }
 
 .answers {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     text-align: left;
     display: inline-block;
+    margin-top: 10px;
 }
 
 .answers label {
@@ -107,8 +195,8 @@ button:hover {
 }
 
 #results {
-    margin-top: 15px;
-    padding: 20px;
+    margin-top: 0;
+    padding: 0;
 }
 
 .slide {
@@ -131,52 +219,52 @@ button:hover {
     bottom: 0;
     width: 100%;
     height: 40px;
+    text-shadow: 0px 1px 0px #fff;
+    background-image: -webkit-gradient(linear, left top, left bottom,
+            from(#ccc), to(#999));
 }
 
 #footer h5 {
     text-align: center;
     margin-top: 10px;
     font-size: 15px;
-    font-family: "Poppins-Thin";
 }
 
 h2 {
-    font-weight: 100;
-    margin-bottom: 10px;
-    margin-top: -1px;
-    
-    
- 
+    color: #333; 
+    font-weight: 100; 
+    font-size: 40px; 
+    margin: 40px 0px 20px; 
 }
 
 #clockdiv {
-    font-family: sans-serif;
-    color: #fff;
-    display: inline-block;
-    font-weight: 100;
-    text-align: center;
-    font-size: 30px;
+    font-family: sans-serif; 
+    color: #fff; 
+    display: inline-block; 
+    font-weight: 100; 
+    text-align: center; 
+    font-size: 30px; 
 }
 
 #clockdiv>div {
-    padding: 10px;
-    border-radius: 100px;
+    padding: 10px; 
+    border-radius: 100px; 
     background-image: -webkit-gradient(linear, left top, left bottom,
-            from(#ccc), to(#999));
-    display: inline-block;
+            from(#ccc), to(#999)); 
+    display: inline-block; 
     border: solid 1px #333;
-    width: 100px;
-    height: 100px;
+    width: 100px; 
+    height: 100px; 
 }
 
 #clockdiv div>span {
-    padding: 15px;
-    border-radius: 3px;
-    background: #333;
-    display: inline-block;
+    padding: 15px; 
+    border-radius: 3px; 
+    background: #333; 
+    display: inline-block; 
 }
 
 .smalltext {
-    padding-top: 3px;
-    font-size: 16px;
+    padding-top: 3px; 
+    font-size: 16px; 
 }
